--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.tianyongwei</groupId>
-	<artifactId>blog</artifactId>
+	<artifactId>tianyongweicom</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
