--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://104.196.195.67:3306/website
+spring.datasource.url=jdbc:mysql://35.201.202.116:3306/test
 spring.datasource.username=root
-spring.datasource.password=Test@123.cc
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
 
 # THYMELEAF (ThymeleafAutoConfiguration)
 spring.thymeleaf.cache=false
