--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 # THYMELEAF (ThymeleafAutoConfiguration)
 spring.thymeleaf.cache=false
