--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
-#spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 # THYMELEAF (ThymeleafAutoConfiguration)
 spring.thymeleaf.cache=false
