--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tianyongweicom
+spring.datasource.url=jdbc:mysql://localhost:3306/tianyongweicom?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
